# IdentityGenerator

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  requirements.txt  run.py
src/identity_gen/: __init__.py  area_codes.json  china_data.py  cli.py  config.py.example  formatters.py  generator.py  idcard_image_generator.py  model_config.py  model_manager.py  models.py  web.py
src/identity_gen/data/: companies.json  education.json  ethnicities.json  generation_rules.json  geo_data.json  jobs.json  marital.json  medical.json  names.json  political.json
tests/: test_china_data_edge_cases.py  test_cli.py  test_cli_model_commands.py  test_config.py  test_formatters.py  test_formatters_edge_cases.py  test_formatters_extended.py  test_generator.py  test_generator_edge_cases.py  test_idcard_image_generator.py  test_model_config.py  test_model_manager.py  test_models.py  test_new_features.py  test_web.py
